[gd_scene load_steps=2 format=3 uid="uid://qppc6sbc1cn0"]

[ext_resource type="Script" path="res://src/screens/setup/setup_manager/setup_manager.gd" id="2_f1nd3"]

[node name="Start" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_f1nd3")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -490.5
offset_top = -401.5
offset_right = 490.5
offset_bottom = 401.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Manager" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ManagerLabel" type="Label" parent="VBoxContainer/Manager"]
layout_mode = 2
text = "MANAGER"

[node name="Container" type="GridContainer" parent="VBoxContainer/Manager"]
layout_mode = 2
theme_override_constants/h_separation = 30
columns = 2

[node name="NameLabel" type="Label" parent="VBoxContainer/Manager/Container"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
text = "NAME"

[node name="Name" type="LineEdit" parent="VBoxContainer/Manager/Container"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Hans"

[node name="SurNameLabel" type="Label" parent="VBoxContainer/Manager/Container"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
text = "SURNAME"

[node name="SurName" type="LineEdit" parent="VBoxContainer/Manager/Container"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Viustel"

[node name="NatLabel" type="Label" parent="VBoxContainer/Manager/Container"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
text = "NATIONALITY"

[node name="Nat" type="OptionButton" parent="VBoxContainer/Manager/Container"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Back" type="Button" parent="VBoxContainer/Buttons"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "CANCEL"
metadata/_edit_use_anchors_ = true

[node name="Continue" type="Button" parent="VBoxContainer/Buttons"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "CONTINUE"
metadata/_edit_use_anchors_ = true

[connection signal="text_changed" from="VBoxContainer/Manager/Container/Name" to="." method="_on_name_text_changed"]
[connection signal="text_changed" from="VBoxContainer/Manager/Container/SurName" to="." method="_on_sur_name_text_changed"]
[connection signal="item_selected" from="VBoxContainer/Manager/Container/Nat" to="." method="_on_nat_item_selected"]
[connection signal="pressed" from="VBoxContainer/Buttons/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/Continue" to="." method="_on_continue_pressed"]
